tools/hrw4u/tests/data/vars/vars_type.fail.error.txt
tests/data/vars/vars_type.fail.input.txt:8:3: error: Type mismatch: VarType.INT8 vs VarType.INT16
   8 |    first = second;
     |    ^
